crates/poe-content/tests/snapshots/snapshots__empty_cache_key_error.snap
---
source: crates/poe-content/tests/snapshots.rs
expression: error.to_string()
---
"cache key must be a relative safe path: "
