crates/poe-content/tests/snapshots/snapshots__hydrated_index_bundle.snap
---
source: crates/poe-content/tests/snapshots.rs
expression: "serde_json::json!({\n    \"summary\": hydrated.index.summary(), \"logical_paths\": logical_paths,\n    \"root_directories\": root_directories, \"world_areas\": world_areas,\n})"
---
logical_paths:
  - Metadata/Data/WorldAreas.datc64
  - Metadata/Data/Terrain/Act1/Area.tsi
  - BaseItemTypes.datc64
root_directories:
  - BaseItemTypes.datc64
  - Metadata
summary:
  bundles: 2
  directories: 1
  files: 2
  path_reps_bundle_size: 169
world_areas:
  bundle: Art/Textures.bundle.bin
  offset: 128
  size: 42
