crates/poe-content/tests/snapshots/snapshots__offline_cache_miss_error.snap
---
source: crates/poe-content/tests/snapshots.rs
expression: error.to_string()
---
offline cache miss for poe1/3.29/patches/3.29.3.3/Bundles2/_.index.bin
